--- a/analytics/templates/analytics/competition_detail.html
+++ b/analytics/templates/analytics/competition_detail.html
@@ -338,7 +338,7 @@
         </div>
     </div>
 </div>
-<a id="user-demo-file" target="_blank" download="User File.csv" href="data:@file/vnd.ms-excel;base64,c29sdXRpb24NCjENCjENCjENCjENCjANCjENCjANCjANCjENCg==" style="display: none;"></a>
+<a id="user-demo-file" target="_blank" download="User File.csv" href="{% static 'competition/demo/user_file.csv' %}" style="display: none;"></a>
 
 <script>
 $(document).ready(function () {
