--- a/analytics/templates/analytics/plan_create.html
+++ b/analytics/templates/analytics/plan_create.html
@@ -40,9 +40,9 @@
         border: 1px solid #e7e7e7;
     }
 
-    small{
-      padding: 1em;
-      font-size: 12px;
+    small.form-text.text-muted{
+        display: block;
+        margin-top: .4rem;
     }
 </style>
 {% with 'ckeditorwidget,textarea' as widget_list %}
