--- a/home/templates/home/base.html
+++ b/home/templates/home/base.html
@@ -277,6 +277,8 @@
                                 <ul>
                                    <li><a href="{% url 'home:terms' 'refund_policy' %}">Refund Policy</a></li>
                                    <li><a href="{% url 'home:terms' 'cancellation_policy' %}">Cancellation Policy</a></li>
+                                    <li><a href="{% url 'home:terms' 'privacy-policy' %}">Privacy Policy</a></li>
+                                    <li><a href="{% url 'home:terms' 'terms-and-condition' %}">Terms And Condition</a></li>
                                 </ul>
                             </div>
                         </div>
@@ -313,18 +315,18 @@
             <div class="footer-bottom">
                 <div class="container">
                     <div class="row">
-                        <div class="col-lg-4 col-md-12 text-left "><span>Copyright © 2021 Stellar AI</span></div>
-                        <div class="col-lg-4 col-md-12 text-center "><span>Developed by <a href="http://siteguide.co.in/" target="_blank">SiteGuide</a></span></div>
-                        <div class="col-lg-4 col-md-12 text-right ">
-                            <div class="widget-link">
-                                <ul>
-                                    <li><a href="{% url 'home:terms' 'privacy-policy' %}">Privacy Policy</a></li>
-                                    <li><a href="{% url 'home:terms' 'terms-and-condition' %}">Terms And Condition</a></li>
-<!--                                    <li><a href="javascript:void(0);">Customer Support</a></li>-->
-<!--                                    <li><a href="javascript:void(0);">Careers</a></li>-->
-                                </ul>
-                            </div>
-                        </div>
+                        <div class="col-lg-6 col-md-12 text-left "><span>Copyright © 2021 Stellar AI</span></div>
+                        <div class="col-lg-6 col-md-12 text-right" ><span>Developed by <a href="http://siteguide.co.in/" target="_blank">SiteGuide</a></span></div>
+<!--                        <div class="col-lg-4 col-md-12 text-right ">-->
+<!--                            <div class="widget-link">-->
+<!--                                <ul>-->
+<!--                                    <li><a href="{% url 'home:terms' 'privacy-policy' %}">Privacy Policy</a></li>-->
+<!--                                    <li><a href="{% url 'home:terms' 'terms-and-condition' %}">Terms And Condition</a></li>-->
+<!--&lt;!&ndash;                                    <li><a href="javascript:void(0);">Customer Support</a></li>&ndash;&gt;-->
+<!--&lt;!&ndash;                                    <li><a href="javascript:void(0);">Careers</a></li>&ndash;&gt;-->
+<!--                                </ul>-->
+<!--                            </div>-->
+<!--                        </div>-->
                     </div>
                 </div>
             </div>
