--- a/competition/templates/compdetail.html
+++ b/competition/templates/compdetail.html
@@ -711,7 +711,7 @@ li p {
         </div>
     </div>
 </div>
-<a id="user-demo-file" target="_blank" download="User File.csv" href="data:@file/vnd.ms-excel;base64,c29sdXRpb24NCjENCjENCjENCjENCjANCjENCjANCjANCjENCg==" style="display: none;"></a>
+<a id="user-demo-file" target="_blank" download="User File.csv" href="{% static 'competition/demo/user_file.csv' %}" style="display: none;"></a>
 {% endblock %}
 
 
